--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prop-types": "15.6.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-grid-system": "^4.3.1",
     "react-helmet": "5.2.0",
     "react-loadable": "^5.4.0",
     "react-redux": "5.0.7",
